# Game-of-Life

./: .gitignore  CMakeLists.txt  Game of Life.sln  Game of Life.vcxproj  Game of Life.vcxproj.filters  README.md
libraries/include/: CMakeLists.txt  Shader.h  camera.h  cells.h  input.h  view.h
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
shaders/: shader.frag  shader.vert
src/: cells.cpp  cellupdates.cpp  glad.c  input.cpp  main.cpp  shader.frag  shader.vert  start.cpp
